--- a/style.css
+++ b/style.css
@@ -95,330 +95,137 @@ p {
   line-height: 30px;
   border: none;
 }
-.firstdiv {
-  flex-shrink: 0;
-}
-
-.homepagehone {
-  width: 602px;
-  height: 220px;
-  color: var(--Black, #373737);
-  font-size: 48.83px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 73.2px;
-}
-
-.homepagesix {
-  width: 586px;
-  height: 76px;
-  flex-shrink: 0;
-  color: var(--Paragraph, #7b7b7b);
-
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-  margin-top: -18px;
-}
-
-.homepagebutton {
-  color: var(--Whit, #fff);
-
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 30px;
-  display: flex;
-  padding: 10px 22px;
-  align-items: flex-start;
-  gap: 10px;
-  margin-top: -10px;
-  border-radius: 5px;
-  background: var(--Orange, #ff5300);
-  border-color: #ff5300;
-  border-bottom: #ff5300;
-  border-right: #ff5300;
-}
-/* .firstdivhomepage{
-          margin-top:130px;
-      } */
-.imgclass {
-  margin-top: 140px;
-}
-.container2 {
-  background-color: white;
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-  box-sizing: border-box;
-  padding: 30px;
-  margin-top: -300px;
-  margin-left: -0px;
-}
-
-.box {
+.block__top {
+  margin-bottom: 10px;
   text-align: center;
-  padding: 20px; /* Adjust padding as needed */
-  width: 370px;
-  height: 300px;
-  margin-top: 30px;
-  margin-left: 30px; /* Adjust margin as needed */
-  border-radius: 10px;
-  background: var(--Whit, #fff);
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
-  box-sizing: border-box;
 }
-.custom-div {
-  top: 900px;
-  left: 0px;
-  width: 1440px; /* Set your desired width */
-  height: 991px; /* Set your desired height */
-  background-color: white; /* Set your desired background color */
-  color: black; /* Set your desired text color */
-  padding: 20px; /* Set your desired padding */
-  box-sizing: border-box;
-  /* margin-top:120px; */
-}
-.logotwo {
-  width: 50px;
-  height: 50px;
-  object-fit: contain;
-  margin-bottom: 10px;
-}
-
-.title {
-  font-size: 16px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.content {
-  font-size: 14px;
-  color: #555;
-}
-.borderdiv {
-  display: flex;
+.block__help-txt {
   position: relative;
-  margin-left: 85px;
-  margin-top: -40px;
-}
-.bd {
-  color: var(--Orange, #ff5300);
-
+  display: inline-block;
+  margin-bottom: 15px;
   font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-  text-align: center;
-  margin-top: 120px;
-  margin-bottom: 8px;
+  line-height: 24px;
+  color: #f35500;
 }
-.db {
-  color: var(--Black, #373737);
-
-  font-size: 39.063px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 58.59px;
-  text-align: center;
-  margin-top: 0px;
+.block__title {
+  font-size: 32px;
+  line-height: 46px;
 }
-#bo1 {
-  flex-shrink: 0;
-  border-radius: 10px;
-  background: var(--Whit, #fff);
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
-}
-#bo2 {
-  margin-left: 30px;
-  flex-shrink: 0;
-  border-radius: 10px;
-  background: var(--Whit, #fff);
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
-}
-#bo3 {
-  margin-left: 30px;
-  margin-right: 135px;
-  flex-shrink: 0;
-  border-radius: 10px;
-  background: var(--Whit, #fff);
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
-}
-#bo4 {
-  margin-top: 30px;
-  margin-left: 135px;
-  flex-shrink: 0;
-  border-radius: 10px;
-  background: var(--Whit, #fff);
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
-}
-
-#bo5 {
-  margin-top: 30px;
-  margin-left: 30px;
-  flex-shrink: 0;
-  border-radius: 10px;
-  background: var(--Whit, #fff);
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
-}
-
-#bo6 {
-  margin-top: 30px;
-  margin-left: 30px;
-  margin-right: 135px;
-  flex-shrink: 0;
-  border-radius: 10px;
-  background: var(#fff);
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
-}
-.divsecond {
-  display: flex;
-  margin-left: -25px;
-}
-.logotwoo {
-  margin-bottom: 190px;
-  margin-right: 245px;
-}
-.hlogo {
+.block__subtitle {
   color: var(--Black, #373737);
   font-size: 25px;
   font-style: normal;
   font-weight: 600;
   line-height: 37.5px; /* 150% */
-  margin-top: 0;
 }
-#g1 {
-  margin-right: 217px;
-  margin-top: -175px;
-  white-space: nowrap;
+.block--wwd__cols {
+  display: flex;
+  flex-wrap: wrap;
 }
-#g2 {
-  margin-right: 173px;
-  margin-top: -175px;
+.block--wwd__items {
+  width: 33.33%;
+  padding: 15px;
 }
-#g3 {
-  margin-right: 149px;
-  margin-top: -175px;
+.block--wwd__content {
+  position: relative;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
 }
-#g4 {
-  margin-right: 193px;
-  margin-top: -175px;
+.block--wwd__items .block--wwd__content:before {
+  width: 83px;
+  height: 74px;
+  position: absolute;
+  top: 30px;
+  right: 20px;
+  font-size: 64px;
+  line-height: 73px;
+  font-weight: 600;
+  color: #efefef;
+  text-align: right;
 }
-#g5 {
-  margin-right: 115px;
-  margin-top: -175px;
+.block--wwd__items:first-child .block--wwd__content:before {
+  content: "01";
 }
-#g6 {
-  margin-right: 126px;
-  margin-top: -175px;
+.block--wwd__items:nth-child(2) .block--wwd__content:before {
+  content: "02";
 }
-#shtate {
-  margin-right: 217px;
-  /* margin-top:-50px; */
-  color: var(--Paragraph, #7b7b7b);
+.block--wwd__items:nth-child(3) .block--wwd__content:before {
+  content: "03";
+}
 
-  font-size: 12.8px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 19.2px; /* 150% */
+.block--wwd__items:nth-child(4) .block--wwd__content:before {
+  content: "04";
 }
-#ii {
-  width: 325px;
+
+.block--wwd__items:nth-child(5) .block--wwd__content:before {
+  content: "05";
+}
+
+.block--wwd__items:nth-child(6) .block--wwd__content:before {
+  content: "06";
+}
+.block--wwd {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.block--wwd__items__type {
+  font-size: 12px;
+  line-height: 19px;
+  font-weight: 300;
+}
+
+.block--wwd__picture {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+
+.block--wwd__img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.block__text {
+  width: 326px;
   height: 77px;
   flex-shrink: 0;
-  margin-right: 220px;
-
   color: var(--Paragraph, #7b7b7b);
-  /* H6 */
-
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 150% */
-  margin-right: 25px;
-  margin-bottom: 20px;
+  line-height: 24px;
+  margin-top: 20px;
 }
 
-#pnumrat {
-  color: #efefef;
-
-  font-size: 64px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 73.2px; /* 114.375% */
-  margin-top: -300px;
-  margin-right: -290px;
+.div-with-icons-text {
+  display: flex;
+  margin-top: 0px;
 }
-/* .divforOurServices1{
-                          width: 40px;
-                      height: 1px;
-                      background: #FF5300;
-                      margin-left:550px;
-                      
-                      } */
-
-.homepagehone,
-.homepagesix,
-.homepagebutton,
-.db,
-.bd,
-.container,
-.hlogo,
-#shtate,
-#ii,
-#pnumrat body {
-  font-family: "Poppins", sans-serif;
-}
-#ii {
-  text-align: left;
-  margin-left: 18px;
-  font-size: 18px;
-  width: 330px;
-  height: 77px;
-}
-
-.aa {
-  color: var(--Orange, #ff5300);
-  /* H6 */
-  margin-top: 120px;
-  margin-left: 135px;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-}
-.g {
+.text-main-left {
   color: var(--Black, #373737);
   font-size: 39.063px;
   font-style: normal;
   font-weight: 600;
   line-height: 58.59px; /* 149.99% */
-  margin-left: 135px;
+  margin-bottom: 20px;
 }
-.pp {
-  width: 544px;
-  height: 77px;
+.block-main_left_p1 {
+  width: 586px;
+  height: 76px;
   flex-shrink: 0;
   color: var(--Paragraph, #7b7b7b);
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 150% */
-  margin-left: 135px;
-  margin-bottom: 20px;
+  line-height: 24px;
+  margin-bottom: 0px;
 }
-.img {
-  margin-left: 704px;
-}
-#img1 {
-  margin-top: -375px;
-}
-
 .icon {
   display: flex;
   margin: 15px;
-  margin-left: 135px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 .jj {
   color: var(--Black, #373737);
@@ -428,11 +235,8 @@ p {
   font-weight: 400;
   line-height: 24px;
   margin: 15px;
-  margin-left: 174px;
 }
-#jj1 {
-  margin-top: -117px;
-}
+
 .aaas {
   width: 1440px;
   padding-top: 0px; /* Set the padding to create space */
@@ -441,8 +245,6 @@ p {
   padding-bottom: 120px;
 }
 .aa {
-  padding-top: 120px;
-  margin-left: 659px;
   color: var(--Orange, #ff5300);
 
   font-size: 16px;
@@ -451,7 +253,6 @@ p {
   line-height: 24px; /* 150% */
 }
 .aa2 {
-  margin-left: 537px;
   color: var(--Black, #373737);
   font-size: 39.063px;
   font-style: normal;
