--- a/style.css
+++ b/style.css
@@ -237,43 +237,10 @@ p {
   margin: 15px;
 }
 
-.aaas {
-  width: 1440px;
-  padding-top: 0px; /* Set the padding to create space */
-  background-color: white; /* Set the background color of the section to white */
-  margin-top: 120px;
-  padding-bottom: 120px;
-}
-.aa {
-  color: var(--Orange, #ff5300);
-
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-}
-.aa2 {
-  color: var(--Black, #373737);
-  font-size: 39.063px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 58.59px;
-  margin-top: -15px;
-}
-.list {
-  color: var(--Paragraph, #7b7b7b);
-
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 30px;
-  display: flex;
-  text-align: center;
-}
-.navbar {
+/* .navbar {
   margin-top: 30px;
   padding: 10px;
-}
+} */
 
 .nav-list {
   list-style-type: none;
@@ -284,19 +251,6 @@ p {
 
 .nav-list li {
   margin-right: 20px; /* Adjust as needed for spacing between list items */
-}
-
-.nav-list a {
-  text-decoration: none;
-  color: var(--Paragraph, #7b7b7b);
-
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 30px;
-  display: block;
-  padding: 10px;
-  border-radius: 5px;
 }
 
 .nav-list a:hover {
@@ -313,21 +267,7 @@ p {
   background: var(--Orange, #ff5300);
   margin-top: -20px;
 }
-#list2 {
-  margin-right: 65px;
-}
-#list3 {
-  margin-right: 63px;
-}
-#list4 {
-  margin-right: 62px;
-}
-#list5 {
-  margin-right: 62px;
-}
-#list6 {
-  margin-right: 186px;
-}
+
 .grid-container {
   display: flex;
   margin-top: 15px;
@@ -351,231 +291,179 @@ p {
   height: 100%;
   object-fit: cover;
 }
-.firstone {
-  width: 370px;
-  height: 270px;
-  flex-shrink: 0;
+/* sliderCss */
 
-  border-radius: 10px;
-  background: var(--Whit, #fff);
-  /* Effect-1 */
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
-  margin-left: 135px;
-  margin-top: -30px;
-  /* margin-top:-270px; */
-}
-.secondone {
-  width: 370px;
-  height: 270px;
-  flex-shrink: 0;
-
-  border-radius: 10px;
-  background: var(--Whit, #fff);
-  /* Effect-1 */
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
-  margin-left: 535px;
-  margin-top: -270px;
-}
-.thirdone {
-  width: 370px;
-  height: 270px;
-  flex-shrink: 0;
-
-  border-radius: 10px;
-  background: var(--Whit, #fff);
-  /* Effect-1 */
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
-  margin-left: 935px;
-  margin-top: -270px;
-}
-.lineatourtes1 {
-  width: 40px;
-  height: 1px;
-  background: #ff5300;
-  margin-left: 600px;
-  margin-top: -15px;
-}
-.lineatourtes2 {
-  width: 40px;
-  height: 1px;
-  background: #ff5300;
-  margin-left: 780px;
-  margin-top: -23px;
+.block--testimonials__rating {
+  margin-bottom: 10px;
 }
 
-.kkk {
-  color: var(--Orange, #ff5300);
-  /* H6 */
-
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-  margin-top: 120px;
-  margin-left: 658px;
-  margin-bottom: 15px;
-}
-.kkkk {
-  color: var(--Black, #373737);
-  /* H2 */
-
-  font-size: 39.063px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 58.59px; /* 149.99% */
-  margin-top: 0px;
-  margin-left: 498px;
-  margin-bottom: 60px;
-}
-.ll {
-  width: 50px;
-  height: 50px;
-  flex-shrink: 0;
-  stroke-width: 1px;
-  stroke: var(--Orange, #ff5300);
-}
-.yje {
-  margin-left: 25px;
+.swiper-testimonial__person {
+  position: relative;
   margin-top: 25px;
+  display: flex;
+  align-items: center;
 }
-.texttt {
-  width: 320px;
-  height: 100px;
-  flex-shrink: 0;
-  color: var(--Paragraph, #7b7b7b);
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-  margin-left: 25px;
-  margin-top: 10px;
-}
-.fotoooo {
+
+.swiper-testimonial__person:before {
+  content: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M48.5425 16.6974C51.1175 19.4324 52.5 22.4999 52.5 27.4724C52.5 36.2224 46.3575 44.0649 37.425 47.9424L35.1925 44.4974C43.53 39.9874 45.16 34.1349 45.81 30.4449C44.4675 31.1399 42.71 31.3824 40.9875 31.2224C36.4775 30.8049 32.9225 27.1024 32.9225 22.4999C32.9225 20.1792 33.8444 17.9536 35.4853 16.3127C37.1263 14.6717 39.3519 13.7499 41.6725 13.7499C44.355 13.7499 46.92 14.9749 48.5425 16.6974ZM23.5425 16.6974C26.1175 19.4324 27.5 22.4999 27.5 27.4724C27.5 36.2224 21.3575 44.0649 12.425 47.9424L10.1925 44.4974C18.53 39.9874 20.16 34.1349 20.81 30.4449C19.4675 31.1399 17.71 31.3824 15.9875 31.2224C11.4775 30.8049 7.9225 27.1024 7.9225 22.4999C7.9225 20.1792 8.84437 17.9536 10.4853 16.3127C12.1263 14.6717 14.3519 13.7499 16.6725 13.7499C19.355 13.7499 21.92 14.9749 23.5425 16.6974Z' fill='%23BCC1C7'/%3E%3C/svg%3E%0A");
+  position: absolute;
+  right: 0;
+  top: 0;
   width: 60px;
   height: 60px;
-  flex-shrink: 0;
-  border-radius: 60px;
-  background: url(<path-to-image>), lightgray 50% / cover no-repeat;
-  margin-left: 25px;
-  margin-top: -15px;
+  z-index: -1;
+  opacity: 0.5;
 }
-.ph {
-  color: var(--Orange, #ff5300);
 
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 30px; /* 150% */
-  width: 157px;
-  height: 30px;
-  margin-left: 100px;
-  margin-bottom: 1px;
-  margin-top: -60px;
+.swiper-testimonial__name {
+  color: #f35500;
 }
-.ceo {
-  color: var(--Paragraph, #7b7b7b);
-  font-size: 12.8px;
-  font-style: normal;
+
+.swiper-testimonial__position {
+  font-size: 13px;
+  line-height: 19px;
   font-weight: 300;
-  line-height: 19.2px; /* 150% */
-  margin-left: 100px;
-  margin-top: -28px;
+  color: #7b7b7b;
 }
-.presje {
-  margin-left: 79px;
-  margin-top: -40px;
-}
-.rrethi1 {
-  width: 30px;
-  height: 30px;
-  flex-shrink: 0;
 
-  stroke-width: 1px;
-  stroke: var(--Black, #373737);
-  margin-right: 25px;
+.swiper-testimonial__picture {
+  width: 60px;
+  height: 60px;
+  margin-right: 15px;
 }
-.shenja1 {
-  width: 50px;
-  height: 50px;
-  flex-shrink: 0;
-}
-.rrethi2 {
-  width: 50px;
-  height: 50px;
-  flex-shrink: 0;
-  stroke-width: 1px;
-  stroke: var(--Orange, #ff5300);
-  margin-left: 1330px;
-}
-.shenja {
-  width: 30px;
-  height: 30px;
-  flex-shrink: 0;
-  margin-top: 1200px;
-}
-.starts {
-  margin-bottom: 70px;
-}
-.k1 {
-  border-color: #fff7f4;
-  border-bottom: #fff7f4;
-  border-right: #fff7f4;
-  background: var(--orange-background, #fff7f4);
-}
-.divatOurCapabilities {
-  width: 1440px;
-  height: 1027px;
-  background: #fff;
-}
-.lineatcap {
-  width: 40px;
-  height: 1px;
-  background: #ff5300;
-  margin-left: 245px;
-  margin-top: -8px;
-}
-.htitle {
-  color: var(--Orange, #ff5300);
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-  padding-top: 120px;
-  margin-left: 135px;
-  padding-bottom: 0px;
-  margin-bottom: 0px;
-}
-.htitle2 {
-  color: var(--Black, #373737);
 
-  font-size: 39.063px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 58.59px; /* 149.99% */
-  margin-left: 135px;
-  margin-top: 15px;
-  padding-bottom: 0px;
-  margin-bottom: 0px;
+.swiper-testimonial__img {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  object-fit: cover;
 }
-.htitle3 {
-  width: 570px;
-  height: 71px;
-  flex-shrink: 0;
 
-  color: var(--Paragraph, #7b7b7b);
-  /* H6 */
-
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-  margin-left: 135px;
-  margin-top: 18px;
+.block--testimonials__slide {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: auto;
+  padding: 25px;
+  background-color: #fff;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
+
+.block--testimonials__top {
+  margin-bottom: 40px;
+}
+
+.swiper-button-prev:after,
+.swiper-rtl .swiper-button-next:after {
+  content: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='25' cy='25' r='24.5' transform='rotate(-180 25 25)' stroke='%23FF5300'/%3E%3Cpath d='M23.5349 25.0001L29.7224 31.1876L27.9549 32.9551L19.9999 25.0001L27.9549 17.0451L29.7224 18.8126L23.5349 25.0001Z' fill='%23FF5300'/%3E%3C/svg%3E%0A");
+}
+
+.swiper-button-next:after,
+.swiper-rtl .swiper-button-prev:after {
+  content: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='25' cy='25' r='24.5' stroke='%23FF5300'/%3E%3Cpath d='M26.4651 24.9999L20.2776 18.8124L22.0451 17.0449L30.0001 24.9999L22.0451 32.9549L20.2776 31.1874L26.4651 24.9999Z' fill='%23FF5300'/%3E%3C/svg%3E%0A");
+}
+
+.swiper-button-next.swiper-button-disabled,
+.swiper-button-prev.swiper-button-disabled {
+  opacity: 1;
+}
+
+.swiper-button-next.swiper-button-disabled::after {
+  content: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='25' cy='25' r='24.5' stroke='%23373737'/%3E%3Cpath d='M26.4651 24.9999L20.2776 18.8124L22.0451 17.0449L30.0001 24.9999L22.0451 32.9549L20.2776 31.1874L26.4651 24.9999Z' fill='%23373737'/%3E%3C/svg%3E%0A");
+}
+
+.swiper-button-prev.swiper-button-disabled::after {
+  content: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='25' cy='25' r='24.5' transform='rotate(-180 25 25)' stroke='%23373737'/%3E%3Cpath d='M23.5349 25.0001L29.7224 31.1876L27.9549 32.9551L19.9999 25.0001L27.9549 17.0451L29.7224 18.8126L23.5349 25.0001Z' fill='%23373737'/%3E%3C/svg%3E%0A");
+}
+
+.block--testimonials__swiper {
+  position: relative;
+}
+
+.swiper-button-next {
+  right: -64px;
+}
+
+.swiper-button-prev {
+  left: -64px;
+}
+
+.block--capabilities__left {
+  width: 55%;
+}
+
+.block--capabilities__subtile {
+  margin-bottom: 5px;
+  color: #f35500;
+}
+
+.block--capabilities__desc {
+  font-size: 13px;
+  line-height: 19px;
+  font-weight: 300;
+  color: #373737;
+}
+
+.block--capabilities__li {
+  width: 25%;
+  padding: 0 12px;
+}
+
+.block--capabilities__item {
+  height: 100%;
+  padding: 15px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  text-align: center;
+}
+
+.block--capabilities__ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0 -12px;
+  margin-top: 40px;
+}
+
+.block--capabilities--content {
+  display: flex;
+  align-items: center;
+}
+
+.block--capabilities__picture {
+  display: inline-block;
+  width: 45%;
+  padding-left: 10px;
+}
+
+.block--capabilities__img {
+  width: 100%;
+}
+
+.block--ci {
+  margin: 0 15px;
+}
+
+.block--ci__content {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 70px 0;
+  border-radius: 10px;
+  background-color: #f35500;
+}
+
+.block--ci__item {
+  position: relative;
+  width: 25%;
+  text-align: center;
+  color: #fff;
+}
+
 .boxx {
   display: flex;
-  margin-left: 135px;
-  margin-top: 40px;
 }
 
 .boxx1 {
@@ -589,6 +477,7 @@ p {
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
   margin-top: 40px;
   margin-right: 24px;
+  text-align: center;
 }
 .h7box {
   color: var(--Orange, #ff5300);
@@ -597,13 +486,10 @@ p {
   font-style: normal;
   font-weight: 600;
   line-height: 37.5px; /* 150% */
-  margin-bottom: 59px;
-  margin-left: 36px;
 }
 .h4box {
   color: var(--Black, #373737);
   text-align: center;
-
   font-size: 12.8px;
   font-style: normal;
   font-weight: 300;
@@ -624,8 +510,7 @@ p {
   flex-shrink: 0;
   border-radius: 10px;
   background: var(--Orange, #ff5300);
-  margin-top: 120px;
-  margin-left: 139px;
+  margin-top: 100px;
   display: flex;
 }
 .texticons {
@@ -665,10 +550,10 @@ p {
   margin-top: 70px;
 }
 #line1 {
-  margin-left: 120px;
+  margin-left: 100px;
 }
 #line2 {
-  margin-left: 110px;
+  margin-left: 100px;
 }
 #line3 {
   margin-left: 98px;
@@ -693,7 +578,7 @@ p {
   font-style: normal;
   font-weight: 500;
   line-height: 30px; /* 150% */
-  margin-top: -38px;
+  margin-top: 0px;
   white-space: nowrap;
 }
 .iconat22 {
@@ -716,11 +601,11 @@ p {
   font-style: normal;
   font-weight: 500;
   line-height: 30px; /* 150% */
-  margin-top: -38px;
+  margin-top: 0px;
   white-space: nowrap;
 }
 .iconat33 {
-  margin-left: 130px;
+  margin-left: 120px;
 }
 .texticons3 {
   margin-left: 123px;
@@ -739,7 +624,7 @@ p {
   font-style: normal;
   font-weight: 500;
   line-height: 30px; /* 150% */
-  margin-top: -38px;
+  margin-top: 0px;
   white-space: nowrap;
 }
 .iconat44 {
@@ -762,13 +647,15 @@ p {
   font-style: normal;
   font-weight: 500;
   line-height: 30px; /* 150% */
-  margin-top: -38px;
+  margin-top: 0px;
   white-space: nowrap;
 }
-.firstdivofthisSection {
-  width: 1440px;
-  height: 812px;
-  flex-shrink: 0;
+.htitle {
+  color: var(--Orange, #ff5300);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
 }
 .divwithtitle {
   text-align: center;
@@ -780,7 +667,7 @@ p {
   border-radius: 10px;
   background: var(--Whit, #fff);
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
-  margin-left: 135px;
+
   margin-top: 60px;
 }
 .divfortitle {
@@ -944,7 +831,6 @@ p {
   border-radius: 10px;
   background: var(--Orange, #ff5300);
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
-  margin-left: 135px;
   display: flex;
 }
 .h6subscribe {
@@ -995,7 +881,7 @@ p {
   margin-top: 23px;
 }
 .buttonatsubscribe {
-  margin-left: 282px;
+  margin-left: 260px;
   width: 222px;
   height: 60px;
   flex-shrink: 0;
@@ -1010,8 +896,6 @@ p {
   border: none;
 }
 .footer {
-  width: 1440px;
-  height: 323px;
   flex-shrink: 0;
   background: linear-gradient(
       0deg,
@@ -1028,9 +912,7 @@ p {
   height: 45px;
   margin-top: 57px;
 }
-.firstdivatfooter {
-  margin-left: 132px;
-}
+
 .textatimgfooter {
   margin-top: 20.2px;
   width: 270px;
@@ -1050,6 +932,7 @@ p {
   line-height: 37.5px; /* 150% */
   margin-top: 66px;
   margin-bottom: 0px;
+  margin-left: 30px;
 }
 .footertitle2 {
   color: var(--Orange, #ff5300);
@@ -1057,7 +940,7 @@ p {
   font-style: normal;
   font-weight: 600;
   line-height: 37.5px; /* 150% */
-  margin-left: 35px;
+  /* margin-left: 35px; */
   margin-top: 66px;
   margin-bottom: 0px;
 }
@@ -1067,8 +950,10 @@ p {
   font-style: normal;
   font-weight: 600;
   line-height: 37.5px; /* 150% */
-  margin-left: 150px;
+  /* margin-left: 150px; */
   margin-top: 66px;
+  margin-left: 94px;
+  white-space: nowrap;
 }
 .textatfooter1 {
   width: 265px;
@@ -1078,6 +963,7 @@ p {
   font-weight: 500;
   line-height: 30px; /* 150% */
   margin-top: 20px;
+  margin-left: 30px;
 }
 .footernumber {
   color: var(--Whit, #fff);
@@ -1087,7 +973,7 @@ p {
   line-height: 30px; /* 150% */
   margin-top: 20px;
   margin-bottom: 0px;
-  margin-left: 35px;
+  /* margin-left: 35px; */
 }
 .footeremail {
   color: var(--Whit, #fff);
@@ -1096,21 +982,21 @@ p {
   font-weight: 500;
   line-height: 30px; /* 150% */
   margin-top: 10px;
-  margin-left: 35px;
+  /* margin-left: 35px; */
 }
-.cf {
-  margin-left: -120px;
+/* .cf {
+ margin-left: -120px; 
   margin-top: 135px;
 }
 .fblogo {
-  margin-left: -42px;
+  margin-left: -42px; 
   margin-bottom: 13px;
 }
 .cf2 {
-  margin-left: 30px;
+   margin-left: 30px; 
 }
 .instalogo {
-  margin-left: -42px;
+   margin-left: -42px; 
   margin-bottom: 13px;
 }
 .cf3 {
@@ -1118,17 +1004,28 @@ p {
 }
 .skypelogo {
   margin-bottom: 13px;
-  margin-left: -24px;
+   margin-left: -24px; 
 }
 .cf4 {
   margin-left: 10px;
 }
 .twitterlogo {
   margin-bottom: 13px;
-  margin-left: -24px;
-}
-.divfortheline {
+ margin-left: -24px; 
+} 
+ .divfortheline {
   margin-left: 130px;
+} */
+.footericonas {
+  display: flex;
+  margin-top: 135px;
+  justify-content: space-between;
+  margin-left: -110px;
+}
+.logoOnCircle--Footer {
+  margin-left: -35px;
+  margin-right: 40px;
+  margin-top: 15px;
 }
 .lineinthefooter {
   width: 1170px;
@@ -1142,14 +1039,14 @@ p {
   font-weight: 400;
   line-height: 150.6%;
   margin-left: 18px;
-  margin-top: 0px;
 }
 .divwithtextunderline {
   display: flex;
+  white-space: nowrap;
+  margin-top: 20px;
 }
 .orange1 {
   margin-left: 100px;
-  margin-top: 5px;
 }
 .textatorange1 {
   color: var(--Whit, #fff);
@@ -1158,11 +1055,10 @@ p {
   font-weight: 400;
   line-height: 24px; /* 150% */
   margin-top: -25px;
-  margin-left: 120px;
+  margin-left: 128px;
 }
 .orange2 {
   margin-left: 38px;
-  margin-top: 5px;
 }
 .textatorange2 {
   color: var(--Whit, #fff);
@@ -1171,11 +1067,11 @@ p {
   font-weight: 400;
   line-height: 24px; /* 150% */
   margin-top: -25px;
-  margin-left: 60px;
+  margin-left: 65px;
 }
 .lastcirle {
-  margin-left: 355px;
-  margin-top: -8px;
+  margin-left: 300px;
+  margin-top: -20px;
 }
 .lastsh {
   margin-left: -47px;
