--- a/style.css
+++ b/style.css
@@ -250,13 +250,14 @@ p {
 }
 
 .nav-list li {
-  margin-right: 20px; /* Adjust as needed for spacing between list items */
+  margin-right: 20px;
 }
 
 .nav-list a:hover {
-  background-color: #555; /* Set your desired hover background color */
-  color: white; /* Set your desired hover text color */
+  background-color: #555;
+  color: white;
 }
+
 #list1 {
   margin-left: 185px;
   margin-right: 88px;
@@ -271,8 +272,8 @@ p {
 .grid-container {
   display: flex;
   margin-top: 15px;
-  flex-direction: column; /* Align rows vertically */
-  align-items: center; /* Center rows horizontally */
+  flex-direction: column;
+  align-items: center;
 }
 
 .grid-row {
@@ -280,10 +281,10 @@ p {
 }
 
 .grid-item {
+  position: relative;
   width: 390px;
   height: 313px;
-
-  margin: 0px; /* Adjust margin as needed for spacing between items */
+  margin: 0px;
 }
 
 .grid-item img {
@@ -291,19 +292,67 @@ p {
   height: 100%;
   object-fit: cover;
 }
+
+.overlay {
+  content: "";
+  position: absolute;
+  width: 266px;
+  height: 230px;
+  flex-shrink: 0;
+  background: rgba(255, 83, 0, 0.75);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.overlay svg {
+  width: 50px;
+  height: 50px;
+  fill: white;
+  margin-bottom: 10px;
+}
+
+.overlay-text {
+  color: var(--Whit, #fff);
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 37.5px; /* 150% */
+  text-align: center;
+}
+
+.grid-item:hover .overlay {
+  opacity: 1;
+}
+
+
+
+
+
 /* sliderCss */
 
 .block--testimonials__rating {
   margin-bottom: 10px;
 }
-
+.swiper-testimonial {
+  display: flex;
+}
 .swiper-testimonial__person {
   position: relative;
   margin-top: 25px;
   display: flex;
   align-items: center;
 }
-
+.swiper-wrapper {
+  display: flex; /*Add this line*/
+}
 .swiper-testimonial__person:before {
   content: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M48.5425 16.6974C51.1175 19.4324 52.5 22.4999 52.5 27.4724C52.5 36.2224 46.3575 44.0649 37.425 47.9424L35.1925 44.4974C43.53 39.9874 45.16 34.1349 45.81 30.4449C44.4675 31.1399 42.71 31.3824 40.9875 31.2224C36.4775 30.8049 32.9225 27.1024 32.9225 22.4999C32.9225 20.1792 33.8444 17.9536 35.4853 16.3127C37.1263 14.6717 39.3519 13.7499 41.6725 13.7499C44.355 13.7499 46.92 14.9749 48.5425 16.6974ZM23.5425 16.6974C26.1175 19.4324 27.5 22.4999 27.5 27.4724C27.5 36.2224 21.3575 44.0649 12.425 47.9424L10.1925 44.4974C18.53 39.9874 20.16 34.1349 20.81 30.4449C19.4675 31.1399 17.71 31.3824 15.9875 31.2224C11.4775 30.8049 7.9225 27.1024 7.9225 22.4999C7.9225 20.1792 8.84437 17.9536 10.4853 16.3127C12.1263 14.6717 14.3519 13.7499 16.6725 13.7499C19.355 13.7499 21.92 14.9749 23.5425 16.6974Z' fill='%23BCC1C7'/%3E%3C/svg%3E%0A");
   position: absolute;
@@ -348,6 +397,7 @@ p {
   background-color: #fff;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+  margin: 20px;
 }
 
 .block--testimonials__top {
@@ -378,7 +428,8 @@ p {
 }
 
 .block--testimonials__swiper {
-  position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 
 .swiper-button-next {
